--- a/typescript/package.json
+++ b/typescript/package.json
@@ -4,7 +4,7 @@
     "description": "React Refresh transformer for TypeScript",
     "main": "index.js",
     "scripts": {
-        "test": "ts-jest"
+        "test": "jest"
     },
     "repository": {
         "type": "git",
@@ -26,6 +26,12 @@
         "typescript": "^4"
     },
     "devDependencies": {
-        "typescript": "~4.0.5"
+        "typescript": "~4.0.5",
+        "ts-node": "~9.0.0",
+        "ts-jest": "~26.4.3",
+        "jest": "~26.6.3",
+        "@types/jest": "~26.0.15",
+        "jest-file-snapshot": "~0.5.0",
+        "@types/node": "~14.14.6"
     }
 }
