--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     },
     "homepage": "https://github.com/Jack-Works/react-refresh-transformer#readme",
     "devDependencies": {
-        "typescript": "~4.0.5",
-        "ts-node": "~9.0.0",
-        "ts-jest": "~26.4.3",
-        "jest": "~26.6.3",
-        "@types/jest": "~26.0.15",
-        "jest-file-snapshot": "~0.5.0",
-        "@types/node": "~14.14.6",
+        "@pika/cli": "^0.2.0",
         "@pika/pack": "~0.5.0",
+        "@pika/plugin-build-node": "~0.9.2",
         "@pika/plugin-ts-standard-pkg": "~0.9.2",
-        "@pika/plugin-build-node": "~0.9.2"
+        "@types/jest": "~26.0.15",
+        "@types/node": "~14.14.6",
+        "jest": "~26.6.3",
+        "jest-file-snapshot": "~0.5.0",
+        "ts-jest": "~26.4.3",
+        "ts-node": "~9.0.0",
+        "typescript": "~4.0.5"
     }
 }
