--- a/typescript/package.json
+++ b/typescript/package.json
@@ -2,6 +2,8 @@
     "name": "react-refresh-typescript",
     "version": "2.0.1",
     "description": "React Refresh transformer for TypeScript",
+    "types": "./src/index.ts",
+    "main": "./src/index.ts",
     "scripts": {
         "test": "jest",
         "build": "pika-pack build",
