--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-refresh-typescript",
-    "version": "2.0.2",
+    "version": "2.0.3",
     "description": "React Refresh transformer for TypeScript",
     "types": "./src/index.ts",
     "main": "./src/index.ts",
@@ -28,7 +28,7 @@
     "homepage": "https://github.com/Jack-Works/react-refresh-transformer#readme",
     "peerDependencies": {
         "typescript": "^4",
-        "react-refresh": "0.10.x"
+        "react-refresh": "0.10.x || 0.11.x"
     },
     "devDependencies": {},
     "@pika/pack": {
