--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
         "@pika/pack": "~0.5.0",
         "@pika/plugin-build-node": "~0.9.2",
         "@pika/plugin-ts-standard-pkg": "~0.9.2",
-        "@types/jest": "~27.0.3",
-        "@types/node": "~16.11.10",
-        "jest": "~27.3.1",
+        "@types/jest": "~27.4.1",
+        "@types/node": "~17.0.23",
+        "jest": "~27.5.1",
         "jest-file-snapshot": "~0.5.0",
-        "ts-jest": "~27.0.7",
-        "ts-node": "~10.4.0",
-        "typescript": "~4.5.2"
+        "ts-jest": "~27.1.4",
+        "ts-node": "~10.7.0",
+        "typescript": "~4.6.3"
+    },
+    "pnpm": {
+        "onlyBuiltDependencies": []
     }
 }
