--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "react-refresh-transformers",
+    "packageManager": "pnpm@7.1.6",
     "private": true,
     "version": "0.0.0",
     "description": "React Refresh transformers",
@@ -19,13 +20,13 @@
         "@pika/pack": "~0.5.0",
         "@pika/plugin-build-node": "~0.9.2",
         "@pika/plugin-ts-standard-pkg": "~0.9.2",
-        "@types/jest": "~27.4.1",
-        "@types/node": "~17.0.23",
-        "jest": "~27.5.1",
+        "@types/jest": "~27.5.1",
+        "@types/node": "~17.0.35",
+        "jest": "~28.1.0",
         "jest-file-snapshot": "~0.5.0",
-        "ts-jest": "~27.1.4",
-        "ts-node": "~10.7.0",
-        "typescript": "~4.6.3"
+        "ts-jest": "~28.0.3",
+        "ts-node": "~10.8.0",
+        "typescript": "~4.7.2"
     },
     "pnpm": {
         "onlyBuiltDependencies": []
