--- a/typescript/package.json
+++ b/typescript/package.json
@@ -28,7 +28,7 @@
     "homepage": "https://github.com/Jack-Works/react-refresh-transformer#readme",
     "peerDependencies": {
         "typescript": "^4",
-        "react-refresh": "0.10.x || 0.11.x || 0.12.x || 0.13.x"
+        "react-refresh": "0.10.x || 0.11.x || 0.12.x || 0.13.x || 0.14.x"
     },
     "devDependencies": {},
     "@pika/pack": {
