--- a/typescript/package.json
+++ b/typescript/package.json
@@ -27,7 +27,7 @@
     },
     "homepage": "https://github.com/Jack-Works/react-refresh-transformer#readme",
     "peerDependencies": {
-        "typescript": "^4.8",
+        "typescript": "^4.8 || ^5.0",
         "react-refresh": "0.10.x || 0.11.x || 0.12.x || 0.13.x || 0.14.x"
     },
     "devDependencies": {},
