--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
         "target": "ES2020",
-        "module": "ESNext",
+        "module": "NodeNext",
         "strict": true,
-        "moduleResolution": "node",
+        "moduleResolution": "nodenext",
         "esModuleInterop": true,
         "rootDir": "./src/"
     },
