--- a/typescript/package.json
+++ b/typescript/package.json
@@ -30,7 +30,16 @@
         "typescript": "^4.8 || ^5.0",
         "react-refresh": "0.10.x || 0.11.x || 0.12.x || 0.13.x || 0.14.x"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "@pika/cli": "^0.2.0",
+        "@pika/pack": "~0.5.0",
+        "@pika/plugin-build-node": "~0.9.2",
+        "@pika/plugin-ts-standard-pkg": "~0.9.2",
+        "@types/jest": "~29.5.2",
+        "@types/node": "~20.3.3",
+        "jest": "~29.5.0",
+        "jest-file-snapshot": "~0.5.0"
+    },
     "@pika/pack": {
         "pipeline": [
             [
