--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-refresh-typescript",
-    "version": "2.0.9",
+    "version": "2.0.10",
     "description": "React Refresh transformer for TypeScript",
     "types": "./src/index.ts",
     "main": "./src/index.ts",
@@ -27,18 +27,18 @@
     },
     "homepage": "https://github.com/Jack-Works/react-refresh-transformer#readme",
     "peerDependencies": {
-        "typescript": "^4.8 || ^5.0",
-        "react-refresh": "0.10.x || 0.11.x || 0.12.x || 0.13.x || 0.14.x"
+        "react-refresh": "0.10.x || 0.11.x || 0.12.x || 0.13.x || 0.14.x || 0.15.x || 0.16.x || 0.17.x",
+        "typescript": "^4.8 || ^5.0"
     },
     "devDependencies": {
         "@pika/cli": "^0.2.0",
         "@pika/pack": "~0.5.0",
         "@pika/plugin-build-node": "~0.9.2",
         "@pika/plugin-ts-standard-pkg": "~0.9.2",
-        "@types/jest": "~29.5.2",
-        "@types/node": "~20.3.3",
-        "jest": "~29.5.0",
-        "jest-file-snapshot": "~0.5.0"
+        "@types/jest": "~29.5.14",
+        "@types/node": "~22.10.2",
+        "jest": "~29.7.0",
+        "jest-file-snapshot": "~0.7.0"
     },
     "@pika/pack": {
         "pipeline": [
