chore: remove infra

--- a/example/package.json
+++ b/example/package.json
@@ -8,9 +8,8 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-refresh": "^0.16.0",
-        "react-refresh-typescript": "workspace:*",
+        "react-refresh-typescript": "link:../",
         "ts-loader": "^9.5.1",
-        "ts-node": "^10.9.2",
         "typescript": "^5.7.2",
         "webpack": "^5.97.1",
         "webpack-cli": "^6.0.1",
