--- a/package.json
+++ b/package.json
@@ -45,5 +45,10 @@
         "vitest": "~2.1.8",
         "jest-file-snapshot": "~0.7.0"
     },
-    "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
+    "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf",
+    "files": [
+        "src",
+        "dist",
+        "index.mjs"
+    ]
 }
